# ascii-noise

./: .gitignore  ascii-noise-morph.html  ascii-noise.html  morph-tiles.html  pattern.html
.claude/: settings.local.json
Back up/: ascii-noise.html
pattern-tool/: .gitignore  next.config.ts  package-lock.json  package.json
pattern-tool/app/: globals.css  layout.tsx  page.tsx
pattern-tool/app/components/: page.tsx
pattern-tool/components/: pattern-canvas.tsx
pattern-tool/components/controls/: aspect-controls.tsx  clip-slider.tsx  color-swatches.tsx  colors-controls.tsx  gradient-controls.tsx  grid-controls.tsx  group.tsx  image-controls.tsx  pattern-controls.tsx  slider-row.tsx  source-tabs.tsx  video-placeholder.tsx
pattern-tool/components/ui/: slider.tsx
pattern-tool/lib/: image.ts  media-types.ts  noise.ts  palette.ts  render.ts  tauri.ts  tiles.ts  types.ts  video.ts
pattern-tool/lib/export/: native-video-export.ts  pattern-loop-export.ts  video-export.ts
pattern-tool/src-tauri/: Cargo.toml  tauri.conf.json
pattern-tool/src-tauri/binaries/: ffmpeg-aarch64-apple-darwin
pattern-tool/src-tauri/capabilities/: default.json
pattern-tool/src-tauri/icons/: icon.icns
pattern-tool/src-tauri/src/: lib.rs  main.rs
