[package]
name = "pattern_tool_tauri"
version = "0.1.0"
description = "ABC Labs Pattern Tool (Tauri shell)"
authors = ["ABC Labs"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pattern_tool_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
